--- a/.maestro/realiza-pedido-com-desconto-fail.yaml
+++ b/.maestro/realiza-pedido-com-desconto-fail.yaml
@@ -1,5 +1,5 @@
 appId: com.qazandoqafood
-name: 'Solicita pedido com desconto'
+name: 'Solicita pedido usando CUPOM inválido'
 tags:
   - success
 ---
